k8s/pocketgeo/cloudflared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  labels:
    app: kust
spec:
  selector:
    matchLabels:
      app: kust
  replicas: 3 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: kust
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:2022.10.0-arm64
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config/config.yaml
        - --metrics
        - 0.0.0.0:2000
        - run
        livenessProbe:
          httpGet:
            # Cloudflared has a /ready endpoint which returns 200 if and only if
            # it has an active connection to the edge.
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - name: tunnel-port
          containerPort: 2000
        volumeMounts:
        - name: tunnel-config
          mountPath: /etc/cloudflared/config
          readOnly: true
        - name: tunnel-cert-volume
          mountPath: /etc/cloudflared
          readOnly: true
        - name: tunnel-creds-volume
          mountPath: /etc/cloudflared/creds
          readOnly: true
      volumes:
      - name: tunnel-cert-volume
        secret:
          secretName: cloudflare-blog-cert
      - name: tunnel-creds-volume
        secret:
          secretName: cloudflare-blog-creds
      - name: tunnel-config
        configMap:
          name: cloudflare-blog-configs
