k8s/pocketgeo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketgeo
  labels:
    app: pocketgeo-pg
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocketgeo-pg
  template:
    metadata:
      labels:
        app: pocketgeo-pg
    spec:
      containers:
        - name: pocketgeo
          image: registry.dev.clarkezone.dev/pocketgeotemp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
