k8s/pocketgeo/ps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment
  labels:
    app: pocketgeo-pg
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocketgeo-pg
  template:
    metadata:
      labels:
        app: pocketgeo-pg
    spec:
      containers:
      - name: pocketgeo
        image: registry.dev.clarkezone.dev/pocketgeotemp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
